prevent horizontal overflow on small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -460,6 +460,7 @@ h6:hover>.header-link {
         left: 0;
         top: 0;
         width: 100%;
+        overflow-x: hidden;
     }
 
     #logo {
@@ -543,4 +544,5 @@ h6:hover>.header-link {
         font-size: 1.5em;
     }
 
+    
 }
